<resources>
    <string name="app_name">Feedback</string>
    <string name="name_of_book">Name of Student</string>
    <string name="author_of_book">Department</string>
    <string name="price">Course</string>
    <string name="year">Email</string>
    <string name="code">Issue</string>
    <string name="count">count</string>
    <string name="add">Add</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="sort">sort</string>
    <string name="search">search</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? <font color='#C900FF'>REGISTER</font></string>
    <string name="terms_and_conditions"><u><font color='#C900FF'>Terms and Conditions</font></u></string>
    <string name="by_clicking_this_form_you_agree_with_our">By clicking this form you agree with our</string>
    <string name="already_have_an_account_log_in">Already have an account? <font color='#C900FF'>LOG IN</font></string>
    <string name="register_successfully">Register Successfully</string>
    <string name="you_can_login_now">You can login now</string>
    <string name="register">Register</string>
    <string name="username">User Name</string>
    <string name="login_now">Login Now</string>
    <string name="Logout">Logout</string>
</resources>
