<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        style="@style/generalScreenHints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:text="@string/name_of_book"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/bg_edit_text_gray"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_average"
            app:srcCompat="@drawable/ic_person_black_24dp"
            tools:ignore="VectorDrawableCompat" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gws_color_material_grey_500" />

        <EditText
            android:id="@+id/ename_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5.5"
            android:background="@android:color/transparent"
            android:inputType="textCapWords"
            android:padding="@dimen/padding_average"
            android:singleLine="true"
            android:textColorHint="@color/grey_500" />

    </LinearLayout>


    <TextView
        style="@style/generalScreenHints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:text="@string/author_of_book"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/bg_edit_text_gray"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_average"
            app:srcCompat="@drawable/ic_grade_black_24dp"
            tools:ignore="VectorDrawableCompat" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gws_color_material_grey_500" />

        <EditText
            android:id="@+id/eauthor_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5.5"
            android:background="@android:color/transparent"
            android:inputType="textCapWords"
            android:padding="@dimen/padding_average"
            android:singleLine="true"
            android:textColorHint="@color/grey_500" />

    </LinearLayout>


    <TextView
        style="@style/generalScreenHints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:text="@string/price"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/bg_edit_text_gray"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_average"
            app:srcCompat="@drawable/ic_add_description"
            tools:ignore="VectorDrawableCompat" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gws_color_material_grey_500" />

        <EditText
            android:id="@+id/eprice_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5.5"
            android:background="@android:color/transparent"
            android:inputType="text"
            android:padding="@dimen/padding_average"
            android:singleLine="true"
            android:textColorHint="@color/grey_500" />

    </LinearLayout>

    <TextView
        style="@style/generalScreenHints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:text="@string/year"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/bg_edit_text_gray"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_average"
            app:srcCompat="@drawable/ic_email_black_24dp"
            tools:ignore="VectorDrawableCompat" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gws_color_material_grey_500" />

        <EditText
            android:id="@+id/eyear_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5.5"
            android:background="@android:color/transparent"
            android:inputType="text"
            android:padding="@dimen/padding_average"
            android:singleLine="true"
            android:textColorHint="@color/grey_500" />

    </LinearLayout>


    <TextView
        style="@style/generalScreenHints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:text="@string/code"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/bg_edit_text_gray"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_average"
            app:srcCompat="@drawable/ic_code_black_24dp"
            tools:ignore="VectorDrawableCompat" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gws_color_material_grey_500" />

        <EditText
            android:id="@+id/ecode_et"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="5.5"
            android:background="@android:color/transparent"
            android:inputType="text"
            android:padding="@dimen/padding_average"
            android:singleLine="true"
            android:textColorHint="@color/grey_500" />

    </LinearLayout>



    <Button
        android:id="@+id/edit_edit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:background="@drawable/bg_blue_button"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:typeface="normal" />

</LinearLayout>